--- a/style.css
+++ b/style.css
@@ -178,12 +178,12 @@ p {
 }
 
 .bg-babyshrimp {
-    background: url(../Images/babycard.jpg);
+    background: url(images/babycard.jpg);
     margin: 0 auto;
 }
 
 .bg-fake-main {
-    background: url(../Images/bgmain.jpg);
+    background: url(images/bgmain.jpg);
 }
 
 .bg-fake-main a {
@@ -216,16 +216,16 @@ p {
 
 .bg-bar {
     color: #FFFFCC;
-    background: url(../Images/bg1.jpg);
+    background: url(images/bg1.jpg);
 }
 
 .bg-main {
-    background: url(../Images/bgmain.jpg);
+    background: url(images/bgmain.jpg);
 }
 
 .bg-evil {
     color: #0066CC;
-    background: url(../Images/bg2.jpg);
+    background: url(images/bg2.jpg);
 }
 
 .bg-slide {
